# agentic-your-name-chatbot

./: .gcloudignore  .gitignore  DOMAIN.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: backstop.py  llm.py  main.py  prompts.py
eval/: run_eval.py
eval/data/: golden.jsonl
frontend/: index.html
scripts/: run_server.ps1
